--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--create a rotating wheel effect using HTML and CSS-->>
+<!--create a rotating wheel effect using HTML and CSS-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
